<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype</string>
    <string name="add_exercise_label">Add Exercise</string>
    <string name="title_exercise_detail">Exercise Detail</string>
    <string name="title_activity_main">RixFit - Workout App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="view_exercises">View Exercises</string>
    <string name="exercises">Exercises</string>
    <string name="add_workout">Add Workout</string>
    <string name="view_workouts">View Workouts</string>
    <string name="title_activity_add_exercise">Add Exercise</string>
    <string name="title_activity_add_workout">Add Workout</string>
    <string name="title_workout_list">Workouts</string>
    <string name="title_workout_detail">Workout Detail</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_description">Exercise description</string>
    <string name="add_string">Add</string>
    <string name="one_rep_max">1 Rep Max</string>
    <string name="title_activity_front_page">FrontPage</string>
    <string name="title_section1">Information</string>
    <string name="title_section2">Exercises</string>
    <string name="title_section3">Workouts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
