<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.cydonian.rixfit.MainActivity$PlaceholderFragment">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:id="@+id/addExerciseBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/addWorkoutBtn"
        android:layout_alignEnd="@+id/addWorkoutBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_exercises"
        android:id="@+id/viewExercisesBtn"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/addExerciseBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_workout"
        android:id="@+id/addWorkoutBtn"
        android:layout_below="@+id/viewExercisesBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:singleLine="true"
        android:layout_alignRight="@+id/viewExercisesBtn"
        android:layout_alignEnd="@+id/viewExercisesBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_workouts"
        android:id="@+id/viewWorkoutsBtn"
        android:layout_below="@+id/addWorkoutBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignRight="@+id/viewExercisesBtn"
        android:layout_alignEnd="@+id/viewExercisesBtn" />
</RelativeLayout>
